that only library changes are considered; changes to tests, documentation, demos
or the Marzipano Tool are not tracked.

Each change is prefixed by one of:

- `New`: a newly introduced feature.
- `Fix`: a fix to an existing bug.
- `Breaking`: a breaking change to the API.

Related GitHub issue or pull request numbers are indicated in brackets.

# Upcoming release

# v1.0.0 [YYYY-MM-DD]

# v0.10.2 [2021-03-18]

# New: implement a pinch drag mode.
# Fix: prevent infinite loop when movement callback starts new movement (#364).
# Fix: buggy image cropping on Firefox (#369).

# v0.10.1 [2020-12-23]

* Fix: broken release script (#362).

# v0.10.0 [2020-12-23]

* New: add a `wrapContext` debug option to WebGlStage.
* Fix: pass tile instead of asset to `networkError` callback (#342).
* Breaking: delete Flash and CSS renderers (#350).

# v0.9.1 [2019-11-24]

* New: provide a way to override the easing function in Scene#lookTo (#242).
* New: allow controls to interrupt an ongoing tween.
* Fix: crash in ImageUrlSource on retry (#264).

# v0.9.0 [2019-04-15]

* New: `Layer#renderComplete` event (#200).
* New: allow setting additional CSS transforms on non-embedded hotspot.
* New: add Stage option for progressive loading (#99).
* Fix: make it possible for multiple layers to share a TextureStore (#232).
* Fix: increase the TextureStore default LRU size from 32 to 512.
* Breaking: StaticAsset and DynamicAsset replace existing Asset classes.
* Breaking: TextureStore no longer receives a Geometry argument.
* Breaking: the `TileClass` property of classes is now called `Tile`.

# v0.8.0 [2018-10-29]

* New: `Stage#renderComplete` event (#40, #109, #181, #188).
* New: `TextureStore#textureStartLoad` event (#189).
* Fix: make WebGL rendering resilient to device pixel ratio changes (#196).
* Breaking: listeners are no longer called with event name as first argument.
* Breaking: remove `Layer#stage` and the `stage` Layer constructor argument.